@@ -3,7 +3,8 @@ FROM openjdk:10.0.2-jdk
 ENV SDK_URL="https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip" \
     ANDROID_HOME="/usr/local/android-sdk" \
     ANDROID_VERSION=27 \
-    ANDROID_BUILD_TOOLS_VERSION=27.0.3
+    ANDROID_BUILD_TOOLS_VERSION=27.0.3 \
+    SDKMANAGER_OPTS="--add-modules java.se.ee"
 
 # Download Android
 RUN set -x \
